// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="a b c d e f g h i j k l"
>
  CardControl
</div>
`;

exports[`should render 2`] = `
"
.a {
  position: relative
}

.b {
  padding: 2rem
}

.c {
  border: 0 solid #dedede
}

.d {
  border-top-width: 1px
}

.e {
  background-color: rgba(0, 0, 0, 0.06)
}

.f {
  text-align: center
}

@media (min-width: 47.2em) {
  .g {
    width: 40%
  }
  
  .h {
    border-left-width: 1px
  }
  
  .i {
    border-top-width: 0px
  }
  
  .j {
    vertical-align: middle
  }
  
  .k {
    display: table-cell
  }
}

@media (min-width: 64em) {
  .l {
    width: 30%
  }
}
"
`;

exports[`should render wide 1`] = `
<div
  className="a b c d e f g h i j k l"
>
  CardControl
</div>
`;

exports[`should render wide 2`] = `
"
.a {
  position: relative
}

.b {
  padding: 0px
}

.c {
  border: 0 solid #dedede
}

.d {
  border-top-width: 1px
}

.e {
  background-color: rgba(0, 0, 0, 0.06)
}

.f {
  text-align: inherit
}

@media (min-width: 47.2em) {
  .g {
    width: 40%
  }
  
  .h {
    border-left-width: 1px
  }
  
  .i {
    border-top-width: 0px
  }
  
  .j {
    vertical-align: middle
  }
  
  .k {
    display: table-cell
  }
}

@media (min-width: 64em) {
  .l {
    width: 30%
  }
}
"
`;
